GROOVY-10730: Bump Gradle to 7.5.1
(cherry picked from commit 69b88f0bfd6b430358daf611f3f420cab4a29ce0)