@@ -32,12 +32,18 @@ sourceSets {
     }
 }
 
+// TODO remove the jdk16+ add-opens jvm args once offending code/tests are fixed
+// https://docs.gradle.org/7.5/userguide/upgrading_version_7.html#removes_implicit_add_opens_for_test_workers
 tasks.withType(Test).configureEach {
     def fs = objects.newInstance(TestServices).fileSystemOperations
     def grapeDirectory = new File(temporaryDir, "grape")
     def jdk8 = ['-XX:+UseConcMarkSweepGC']
     def jdk9 = ['-Djava.locale.providers=COMPAT,SPI']
 //        def jdk9 = ['-Djava.locale.providers=COMPAT,SPI', '--illegal-access=debug']
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+        jdk9 += ["--add-opens=java.base/java.lang=ALL-UNNAMED",
+                 "--add-opens=java.base/java.util=ALL-UNNAMED"]
+    }
     def common = ['-ea', "-Xms${groovyJUnit_ms}", "-Xmx${groovyJUnit_mx}", "-Duser.language=en"]
     if (JavaVersion.current().isJava9Compatible()) {
         jvmArgs(*common, *jdk9)
